--- a/ebayy/index.html
+++ b/ebayy/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="/ebay.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ebayy</title>
     <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
